objects/BMCServiceDesk__SYSUsersPortletsConfig__c.object
<CustomObject>
    <description>This object allows you to store data for the details of users and their portlets.</description>
    <fields>
        <fullName>BMCServiceDesk__FKSYSPortlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKPortletID</label>
        <referenceTo>BMCServiceDesk__SYSPortlet__c</referenceTo>
        <relationshipLabel>SYSUsersPortletsConfig</relationshipLabel>
        <relationshipName>SYSUsersPortletsConfig</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKStaff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SYSUsersPortlets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order__c</fullName>
        <label>Order</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__showPortlet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Portlet</label>
        <type>Checkbox</type>
    </fields>
    <label>Users Portlets Config</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>&gt;SYSUsersPortletsConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>